# ar_recog

./: .gitignore  CMakeLists.txt  README.txt  getAndBuildARToolkit.py  package.xml
launch/: aqua-mirror.launch  aqua-nocalib.launch  aqua.launch  ar_compute_pose.launch  ar_recog_front_cam_with_poses.launch  bench_loco.launch  ftag2_gscam_test.launch  loco.launch
launch/david/: ar_compute_pose.launch  ar_recog_no_pose.launch
launch/markers/: 0.pat  1.pat  2.pat  3.pat  object_data
src/: ar_compute_pose.cpp  ar_recog.cpp  load_model.c  load_model.h
src/ARToolKit/: Configure  staticConfig.patch
