<package>
  <name>ar_recog</name>
  <description>
ar_recog processes ROS image-transports with ARToolkit. 
  </description>
  <maintainer email="mrl@cim.mcgill.ca">Graylin Trevor Jay and Christopher Crick</maintainer>
  <license>Creative Commons Attribution</license>
  <version>0.0.1</version>

  <!--rosdep name="libgstreamer0.10-dev"/-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>artoolkit</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>visualization_msgs</build_depend>  
  
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>artoolkit</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>visualization_msgs</run_depend>  
  
  <export>
    <cpp cflags="-I${prefix}/msg/cpp -I${prefix}/srv/cpp"/>
  </export>

</package>
